src/coolcmp/unit_tests/Custom/type_checker/fail/mult-formal.cl
class Main inherits IO {
    main(a: Int, b:String, a:IO): Int {
        1
    };
};
